frontend/frontend/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs436-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /students
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 80
      - path: /grades
        pathType: Prefix
        backend:
          service:
            name: grade-service
            port:
              number: 80
      - path: /courses
        pathType: Prefix
        backend:
          service:
            name: course-service
            port:
              number: 80
